--- a/src/Nav.css
+++ b/src/Nav.css
@@ -2,4 +2,15 @@ h1 {
   font-size: 24pt;
   margin: 0;
   padding: 0;
+  color: #eee;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(111, 111, 111);
+  padding: 10px;
+  margin: 0;
+  border-bottom: 2px solid rgb(58, 58, 58);
 }
