--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,16 +1,18 @@
 h1 {
-  font-size: 24pt;
+  font-size: 1.8rem;
   margin: 0;
-  padding: 0;
-  color: #eee;
+  padding: 0 1rem;
+  color: var(--fg-color-1);
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(111, 111, 111);
-  padding: 10px;
+  background-color: var(--bg-color-1);
+  padding: 0;
   margin: 0;
-  border-bottom: 2px solid rgb(58, 58, 58);
 }
