--- a/src/Side.css
+++ b/src/Side.css
@@ -8,3 +8,19 @@ ul {
   padding: 10px;
   margin: 0;
 }
+
+ul li {
+  list-style: none;
+}
+
+ul li a {
+  text-decoration: none;
+  color: var(--fg-color-1);
+  transition: color 0.3s ease-in-out;
+  transition: font-size 0.3s ease-in-out;
+}
+
+ul li a:hover {
+  color: var(--fg-color-2);
+  font-size: 1.05rem;
+}
