--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
+:root {
+  --header-height: 60px;
+  --fg-color-1: rgb(238, 238, 238);
+  --fg-color-2: rgb(221, 212, 212);
+  --bg-color-1: rgb(111, 111, 111);
+  --bg-color-2: rgb(58, 58, 58);
 }
