--- a/src/Side.css
+++ b/src/Side.css
@@ -3,24 +3,33 @@ ul {
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-color: rgb(111, 111, 111);
-  padding: 10px;
+  align-items: left;
+  background-color: var(--bg-color-1);
+  padding: 0;
   margin: 0;
 }
 
 ul li {
   list-style: none;
+  padding: 20px 5px 20px 15px;
 }
 
 ul li a {
   text-decoration: none;
   color: var(--fg-color-1);
   transition: color 0.3s ease-in-out;
-  transition: font-size 0.3s ease-in-out;
 }
 
 ul li a:hover {
   color: var(--fg-color-2);
-  font-size: 1.05rem;
+}
+ul li:hover {
+  background-color: var(--bg-color-2);
+}
+
+.quiz-link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
