--- a/src/Main.css
+++ b/src/Main.css
@@ -1,8 +1,8 @@
 main {
-  margin: 10px 10px;
+  margin: 10px auto;
   /* border: 1px solid grey; */
   border-radius: 5px;
-  width: clamp(400px, 80vw, 1000px);
+  width: clamp(400px, 80vw, 560px);
   padding-bottom: 60px;
   position: relative;
 }
