--- a/src/Side.css
+++ b/src/Side.css
@@ -11,10 +11,13 @@ ul {
 
 ul li {
   list-style: none;
-  padding: 20px 5px 20px 15px;
 }
 
 ul li a {
+  padding: 20px 5px 20px 15px;
+  display: block;
+  width: 100%;
+  height: 100%;
   text-decoration: none;
   color: var(--fg-color-1);
   transition: color 0.3s ease-in-out;
