--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,13 @@ input,
   font-weight: bold;
 }
 
+.video-controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .video-chapter {
   display: flex;
   flex-direction: row;
