--- a/src/index.css
+++ b/src/index.css
@@ -47,14 +47,15 @@ input,
 .video-controls {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 2em;
 }
 
 .video-chapter {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: stretch;
 }
 
@@ -64,7 +65,7 @@ input,
   list-style: none;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: min(320px, 100%);
 }
 
 .video-chapter > ul > li {
