--- a/src/Side.css
+++ b/src/Side.css
@@ -32,7 +32,7 @@
   background-color: var(--bg-color-2);
 }
 
-.quiz-link {
+.side-nav li a.quiz-link {
   display: flex;
   flex-direction: row;
   align-items: center;
