--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,71 @@ input,
 .video-chapter > ul > li.chapter-active {
   background-color: var(--bg-color-2);
 }
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: calc(100% - 100px);
+  margin: 1rem 50px;
+  background-color: #eee;
+  padding: 1rem 40px;
+  gap: 1rem;
+}
+
+.inline-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.inline-container .num-input,
+.inline-container .text-input {
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  font-size: 1.5rem;
+  margin-left: 2rem;
+}
+
+.inline-container .text-input {
+  width: 20rem;
+}
+
+.box button {
+  min-width: 30px;
+  min-height: 30px;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.output-area span:last-child {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.output-area {
+  gap: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+
+.anim-flip {
+  animation: flip 1.5s ease-in-out 0s 1 normal forwards;
+}
+
+@keyframes flip {
+  0% {transform: scale(1);}
+  50% {transform: scale(0);}
+  100% {transform: scale(1);}
+}
